# llm-task-framework

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  LICENSE  README.md  SECURITY.md  __do_not_edit__candles-feed  benchmark_rules.json  example_regression_rules.json  locustfile.py  mkdocs.yml  pixi.toml  pyproject.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci.yml  dependencies.yml  dev-integration.yml  feature-branch.yml  load-testing.yml  production-release.yml  release.yml  security.yml
docs/: cicd-guide.md  git-flow-workflow.md  index.md  overview.md
reports/: .gitkeep  bandit-report.json
scenarios/: __init__.py  error_testing.py  soak_testing.py  spike_testing.py  stress_testing.py  volume_testing.py
scripts/: activate.sh  analyze_benchmarks.py  ci_integration_example.yml  dev-workflow.sh  generate_ci_summary.py  generate_dashboard.py  load_test_analysis.py  load_test_config.py  memory_test.py  post_benchmark_comment.py  post_load_test_results.py  prd.txt  setup-branch-protection.sh
scripts/security/: report_generator.py
src/llm_task_framework/: __init__.py  __version__.py
src/llm_task_framework/cli/: main.py
src/llm_task_framework/core/: __init__.py  protocols.py
src/llm_task_framework/reporting/: __init__.py  benchmark_analyzer.py  benchmark_reporter.py  ci_reporter.py  dashboard_generator.py  trend_analyzer.py
src/llm_task_framework/services/: __init__.py  config.py  redis_container.py  registry.py
tests/: conftest.py  test_basic.py  test_benchmark_reporting.py  test_ci_reporting.py  test_load_testing.py  test_performance_benchmarks.py  test_trend_dashboard.py
tests/integration/: __init__.py  test_redis_integration.py  test_websocket_integration.py
tests/security/: test_security_system.py
tests/services/: __init__.py  test_config.py  test_redis_container.py  test_registry.py
